# sdk/tyrscale-sdk-go/api/openapi.yaml
@@ -183,7 +183,7 @@ paths:
           description: Internal Server Error
       summary: List recommendation
       tags:
-      - recommendation
+      - recommendations
     post:
       description: Create a recommendation
       operationId: createRecommendation
@@ -215,7 +215,7 @@ paths:
           description: Internal Server Error
       summary: Create a recommendation
       tags:
-      - recommendation
+      - recommendations
       x-codegen-request-body-name: recommendation
     put:
       description: Update a recommendation
@@ -254,7 +254,7 @@ paths:
           description: Internal Server Error
       summary: Update a recommendation
       tags:
-      - recommendation
+      - recommendations
       x-codegen-request-body-name: recommendation
   /recommendations/{route_uuid}:
     delete:
@@ -302,7 +302,7 @@ paths:
           description: Internal Server Error
       summary: Delete a recommendation
       tags:
-      - recommendation
+      - recommendations
   /routes:
     get:
       description: Get list routes
